01-cloudformer-initial.template.json
{
  "AWSTemplateFormatVersion": "2010-09-09",
  "Resources": {
    "vpc0d8d14b7da265ef8d": {
      "Type": "AWS::EC2::VPC",
      "Properties": {
        "CidrBlock": "10.0.0.0/16",
        "InstanceTenancy": "default",
        "EnableDnsSupport": "true",
        "EnableDnsHostnames": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "demo-vpc"
          }
        ]
      }
    },
    "subnet08ca0b1dd940b6a58": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.11.0/24",
        "AvailabilityZone": "us-east-1b",
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "demovpc-private-subnet-1b"
          }
        ]
      }
    },
    "subnet0e99cd6dcb5584c7a": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.0.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "demovpc-public-subnet-1a"
          }
        ]
      }
    },
    "subnet023ba208fa09f6424": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.1.0/24",
        "AvailabilityZone": "us-east-1b",
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "demovpc-public-subnet-1b"
          }
        ]
      }
    },
    "subnet019507bcf8b8d176c": {
      "Type": "AWS::EC2::Subnet",
      "Properties": {
        "CidrBlock": "10.0.10.0/24",
        "AvailabilityZone": "us-east-1a",
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "demovpc-private-subnet-1a"
          }
        ]
      }
    },
    "igw041b5a7ccd6c2ee5c": {
      "Type": "AWS::EC2::InternetGateway",
      "Properties": {
        "Tags": [
          {
            "Key": "Name",
            "Value": "demovpc-igw"
          }
        ]
      }
    },
    "doptb0061ac8": {
      "Type": "AWS::EC2::DHCPOptions",
      "Properties": {
        "DomainName": "ec2.internal",
        "DomainNameServers": [
          "AmazonProvidedDNS"
        ]
      }
    },
    "acl0e13513694509830b": {
      "Type": "AWS::EC2::NetworkAcl",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        }
      }
    },
    "rtb0882d3797064eba5f": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "demovpc-private-rtb-1b"
          }
        ]
      }
    },
    "rtb049d545e3bc0f9e7d": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "demovpc-private-rtb-1a"
          }
        ]
      }
    },
    "rtb06e450c1a142557e8": {
      "Type": "AWS::EC2::RouteTable",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        },
        "Tags": [
          {
            "Key": "Name",
            "Value": "demovpc-public-rtb"
          }
        ]
      }
    },
    "instancei0d0a450b3895cca8d": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-0080e4c5bc078760e",
        "InstanceType": "t2.medium",
        "KeyName": "keypair.us-east-1",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "demoapp-inst-1a"
          }
        ],
        "Volumes": [
          {
            "Device": "/dev/sdb",
            "VolumeId": {
              "Ref": "volumevol09c12c573b1ad8924"
            }
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet019507bcf8b8d176c"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.10.200",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgdemoappappserversg"
              }
            ]
          }
        ]
      }
    },
    "instancei0957d19df164b1aae": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "ImageId": "ami-0080e4c5bc078760e",
        "InstanceType": "t2.micro",
        "KeyName": "keypair.us-east-1",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "demoapp-bastion"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet023ba208fa09f6424"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.1.207",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgdemoappbastionsg"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "instancei09eb740bda7b0aa15": {
      "Type": "AWS::EC2::Instance",
      "Properties": {
        "DisableApiTermination": "false",
        "InstanceInitiatedShutdownBehavior": "stop",
        "IamInstanceProfile": "arn:aws:iam::123412341234:instance-profile/ecslabworkstationprofile",
        "ImageId": "ami-0080e4c5bc078760e",
        "InstanceType": "t2.micro",
        "KeyName": "keypair.us-east-1",
        "Monitoring": "false",
        "Tags": [
          {
            "Key": "Name",
            "Value": "ecs-lab-workstation"
          }
        ],
        "NetworkInterfaces": [
          {
            "DeleteOnTermination": "true",
            "Description": "Primary network interface",
            "DeviceIndex": 0,
            "SubnetId": {
              "Ref": "subnet0e99cd6dcb5584c7a"
            },
            "PrivateIpAddresses": [
              {
                "PrivateIpAddress": "10.0.0.120",
                "Primary": "true"
              }
            ],
            "GroupSet": [
              {
                "Ref": "sgsgecslabworkstation"
              }
            ],
            "AssociatePublicIpAddress": "true"
          }
        ]
      }
    },
    "volumevol08add8d5533514045": {
      "Type": "AWS::EC2::Volume",
      "Properties": {
        "AvailabilityZone": "us-east-1b",
        "Size": "22",
        "VolumeType": "gp2"
      }
    },
    "volumevol09c12c573b1ad8924": {
      "Type": "AWS::EC2::Volume",
      "Properties": {
        "AvailabilityZone": "us-east-1a",
        "Encrypted": true,
        "Size": "8",
        "VolumeType": "gp2",
        "Tags": [
          {
            "Key": "Name",
            "Value": "demoapp-inst-1a"
          }
        ]
      }
    },
    "volumevol0b2e06b38a9c792f1": {
      "Type": "AWS::EC2::Volume",
      "Properties": {
        "AvailabilityZone": "us-east-1a",
        "Size": "22",
        "VolumeType": "gp2"
      }
    },
    "rdsdemoapp": {
      "Type": "AWS::RDS::DBInstance",
      "Properties": {
        "AllocatedStorage": "20",
        "AllowMajorVersionUpgrade": "false",
        "AutoMinorVersionUpgrade": "true",
        "DBInstanceClass": "db.t2.micro",
        "Port": "3306",
        "StorageType": "gp2",
        "BackupRetentionPeriod": "0",
        "MasterUsername": "demoapp",
        "MasterUserPassword": "MyPassword",
        "PreferredBackupWindow": "06:31-07:01",
        "PreferredMaintenanceWindow": "sat:03:11-sat:03:41",
        "DBName": "MyDatabase",
        "Engine": "mysql",
        "EngineVersion": "5.6.40",
        "LicenseModel": "general-public-license",
        "DBSubnetGroupName": {
          "Ref": "dbsubnetdefaultvpc0d8d14b7da265ef8d"
        },
        "VPCSecurityGroups": [
          {
            "Ref": "sgrdslaunchwizard"
          }
        ],
        "Tags": [
          {
            "Key": "workload-type",
            "Value": "other"
          }
        ]
      }
    },
    "dbsubnetdefaultvpc0d8d14b7da265ef8d": {
      "Type": "AWS::RDS::DBSubnetGroup",
      "Properties": {
        "DBSubnetGroupDescription": "Created from the RDS Management Console",
        "SubnetIds": [
          {
            "Ref": "subnet0e99cd6dcb5584c7a"
          },
          {
            "Ref": "subnet023ba208fa09f6424"
          },
          {
            "Ref": "subnet019507bcf8b8d176c"
          },
          {
            "Ref": "subnet08ca0b1dd940b6a58"
          }
        ]
      }
    },
    "sgdemoappbastionsg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "demoapp-bastion-sg",
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        }
      }
    },
    "sgsgecslabworkstation": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "sgecslabworkstation",
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        }
      }
    },
    "sgsgecslabpubliccluster": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "sgecslabpubliccluster",
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        }
      }
    },
    "sgrdslaunchwizard": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Created from the RDS Management Console: 2019/03/08 12:42:26",
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        }
      }
    },
    "sgsgecslabalb": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "sgecslab-alb",
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        }
      }
    },
    "sgdemoappappserversg": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "demoapp-appserver-sg",
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        }
      }
    },
    "acl3": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Egress": "true",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0e13513694509830b"
        }
      }
    },
    "acl4": {
      "Type": "AWS::EC2::NetworkAclEntry",
      "Properties": {
        "CidrBlock": "0.0.0.0/0",
        "Protocol": "-1",
        "RuleAction": "allow",
        "RuleNumber": "100",
        "NetworkAclId": {
          "Ref": "acl0e13513694509830b"
        }
      }
    },
    "subnetacl5": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0e13513694509830b"
        },
        "SubnetId": {
          "Ref": "subnet0e99cd6dcb5584c7a"
        }
      }
    },
    "subnetacl6": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0e13513694509830b"
        },
        "SubnetId": {
          "Ref": "subnet023ba208fa09f6424"
        }
      }
    },
    "subnetacl7": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0e13513694509830b"
        },
        "SubnetId": {
          "Ref": "subnet08ca0b1dd940b6a58"
        }
      }
    },
    "subnetacl8": {
      "Type": "AWS::EC2::SubnetNetworkAclAssociation",
      "Properties": {
        "NetworkAclId": {
          "Ref": "acl0e13513694509830b"
        },
        "SubnetId": {
          "Ref": "subnet019507bcf8b8d176c"
        }
      }
    },
    "gw2": {
      "Type": "AWS::EC2::VPCGatewayAttachment",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        },
        "InternetGatewayId": {
          "Ref": "igw041b5a7ccd6c2ee5c"
        }
      }
    },
    "subnetroute4": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb0882d3797064eba5f"
        },
        "SubnetId": {
          "Ref": "subnet08ca0b1dd940b6a58"
        }
      }
    },
    "subnetroute5": {
      "Type": "AWS::EC2::SubnetRouteTableAssociation",
      "Properties": {
        "RouteTableId": {
          "Ref": "rtb049d545e3bc0f9e7d"
        },
        "SubnetId": {
          "Ref": "subnet019507bcf8b8d176c"
        }
      }
    },
    "route4": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb0882d3797064eba5f"
        }
      }
    },
    "route5": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb049d545e3bc0f9e7d"
        }
      }
    },
    "route6": {
      "Type": "AWS::EC2::Route",
      "Properties": {
        "DestinationCidrBlock": "0.0.0.0/0",
        "RouteTableId": {
          "Ref": "rtb06e450c1a142557e8"
        },
        "GatewayId": {
          "Ref": "igw041b5a7ccd6c2ee5c"
        }
      },
      "DependsOn": "gw2"
    },
    "dchpassoc2": {
      "Type": "AWS::EC2::VPCDHCPOptionsAssociation",
      "Properties": {
        "VpcId": {
          "Ref": "vpc0d8d14b7da265ef8d"
        },
        "DhcpOptionsId": {
          "Ref": "doptb0061ac8"
        }
      }
    },
    "ingress3": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdemoappbastionsg"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "1.2.3.4/32"
      }
    },
    "ingress4": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsgecslabworkstation"
        },
        "IpProtocol": "tcp",
        "FromPort": "22",
        "ToPort": "22",
        "CidrIp": "1.2.3.4/32"
      }
    },
    "ingress5": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsgecslabpubliccluster"
        },
        "IpProtocol": "-1",
        "SourceSecurityGroupId": {
          "Ref": "sgsgecslabalb"
        },
        "SourceSecurityGroupOwnerId": "123412341234"
      }
    },
    "ingress6": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgrdslaunchwizard"
        },
        "IpProtocol": "tcp",
        "FromPort": "3306",
        "ToPort": "3306",
        "CidrIp": "1.2.3.4/32"
      }
    },
    "ingress7": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsgecslabalb"
        },
        "IpProtocol": "tcp",
        "FromPort": "80",
        "ToPort": "80",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "ingress8": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdemoappappserversg"
        },
        "IpProtocol": "-1",
        "CidrIp": "10.0.0.0/16"
      }
    },
    "egress3": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdemoappbastionsg"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress4": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsgecslabworkstation"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress5": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsgecslabpubliccluster"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress6": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgrdslaunchwizard"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress7": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgsgecslabalb"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    },
    "egress8": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Ref": "sgdemoappappserversg"
        },
        "IpProtocol": "-1",
        "CidrIp": "0.0.0.0/0"
      }
    }
  },
  "Description": "demoapp"
}
